Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119141

MediaPlayer-example The data of the files is editable, but cannot be saved

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.6.0
    • Multimedia
    • None
    • Windows
    • 07dd3441d (dev), b88c0a128 (6.9), f58ae2ea9 (6.8)

      The data from the files in the media player are editable if they are present in the file. These fields can be edited, however, nothing will be changed or saved this way. They should be viewable only and the user should not have the option to edit these.

       

        1. image-2023-11-15-09-36-52-932.png
          59 kB
          Frederic Lefebvre
        2. image-2023-11-15-10-05-02-456.png
          60 kB
          Frederic Lefebvre
        For Gerrit Dashboard: QTBUG-119141
        # Subject Branch Project Status CR V

            qtmultimediateam Qt Multimedia Team
            fredericl Frederic Lefebvre
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes