examples: player - make metadata readonly

Fixes a small issue where metadata QLineEdit widgets can be edited by
users.

Fixes: QTBUG-119141
Change-Id: I966d6a6f67898c656be3154f94be9c2fa6a07828
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 07dd3441d8d189e8c8ed68668e18dd100475aa92)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b88c0a128ea5a3e2bb1b1b24b51a9d87c99f290c)